--- a/home/src/main/res/layout/home_view_holder_square_media.xml
+++ b/home/src/main/res/layout/home_view_holder_square_media.xml
@@ -39,6 +39,8 @@
             app:whiteOverlay="@{contentWhiteOverlay}" />
 
         <TextView
+            style="@style/Caption"
+            android:textColor="@color/blue_700"
             android:id="@+id/more_overlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
