--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/home">
 
 
     <fragment
-        android:id="@+id/homeFragment"
+        android:id="@+id/home"
         android:name="com.nlgtuankiet.fera.home.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment">
+        <deepLink
+            android:id="@+id/home_deep_link"
+            app:uri="fera://home/" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/browse"
+        android:name="com.nlgtuankiet.fera.browse.BrowseFragment"
+        android:label="BrowseFragment">
+        <deepLink
+            android:id="@+id/browse_deep_link"
+            app:uri="fera://browse/" />
+    </fragment>
 
 </navigation>
