browse: add categories view + include layout for media group title

--- a/browse/src/main/res/layout/browse_view_holder_pair_media_group.xml
+++ b/browse/src/main/res/layout/browse_view_holder_pair_media_group.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:bind="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools">
 
   <data>
@@ -41,7 +42,7 @@
         android:layout_height="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:stringSource="@{leftImageSource}"
+        app:source="@{leftImageSource}"
         tools:scaleType="centerCrop"
         tools:src="@tools:sample/avatars" />
 
@@ -58,38 +59,15 @@
         android:layout_height="80dp"
         app:layout_constraintLeft_toRightOf="@id/divider"
         app:layout_constraintTop_toTopOf="parent"
-        app:stringSource="@{rightImageSource}"
+        app:source="@{rightImageSource}"
         tools:scaleType="centerCrop"
         tools:src="@tools:sample/avatars" />
 
-      <com.nlgtuankiet.fera.browse.view.LeftEllipsizePairTextView
-        android:id="@+id/name_and_count"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/left_image"
-        app:leftStyle="@style/Body1"
-        app:leftText="@{leftText}"
-        app:rightStyle="@style/Body1"
-        app:rightText="@{rightText}" />
+      <include
+        layout="@layout/browse_include_media_group_title"
+        bind:leftText="@{leftText}"
+        bind:rightText="@{rightText}" />
 
-      <TextView
-        android:id="@+id/type"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name_and_count" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
   </com.google.android.material.card.MaterialCardView>
