--- a/browse/src/main/res/layout/browse_include_media_group_title.xml
+++ b/browse/src/main/res/layout/browse_include_media_group_title.xml
@@ -12,6 +12,10 @@
     <variable
       name="rightText"
       type="String" />
+
+    <variable
+      name="type"
+      type="String" />
   </data>
 
   <merge
@@ -29,15 +33,14 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/left_image"
-      app:leftStyle="@style/Headline6"
+      app:leftStyle="@style/Body1"
       app:leftText="@{leftText}"
-      app:leftTextSize="14sp"
       app:rightStyle="@style/Body1"
       app:rightText="@{rightText}" />
 
     <TextView
       android:id="@+id/type"
-      style="@style/Headline6"
+      style="@style/Body1"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
@@ -45,7 +48,7 @@
       android:layout_marginEnd="8dp"
       android:layout_marginBottom="16dp"
       android:singleLine="true"
-      android:text="Camera (65)"
+      android:text="@{type}"
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
