--- a/core/src/main/res/drawable/ic_outline_circle.xml
+++ b/core/src/main/res/drawable/ic_outline_circle.xml
@@ -7,5 +7,5 @@
   <solid android:color="@android:color/transparent" />
   <stroke
     android:width="1dp"
-    android:color="@android:color/darker_gray" />
+    android:color="@color/color_on_surface_a12" />
 </shape>
