--- a/browse/src/main/res/layout/browse_view_holder_single_media_group.xml
+++ b/browse/src/main/res/layout/browse_view_holder_single_media_group.xml
@@ -17,12 +17,25 @@
       type="String" />
 
     <variable
+      name="type"
+      type="String" />
+
+    <variable
       name="imageSource"
       type="java.lang.Object" />
 
     <variable
       name="imageOption"
       type="RequestOption" />
+
+    <variable
+      name="imageBackgroundColor"
+      type="Integer" />
+
+    <variable
+      name="playIsVisible"
+      type="Boolean" />
+
   </data>
 
   <com.google.android.material.card.MaterialCardView
@@ -42,6 +55,8 @@
         android:id="@+id/left_image"
         android:layout_width="130dp"
         android:layout_height="80dp"
+        android:scaleType="center"
+        app:backgroundColor="@{imageBackgroundColor}"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:option="@{imageOption}"
@@ -49,10 +64,22 @@
         tools:scaleType="centerCrop"
         tools:src="@tools:sample/avatars" />
 
+      <ImageView
+        android:id="@+id/left_play"
+        android:layout_width="@dimen/browse_media_group_play"
+        android:layout_height="@dimen/browse_media_group_play"
+        android:layout_marginTop="@dimen/browse_media_group_play_margin"
+        android:layout_marginEnd="@dimen/browse_media_group_play_margin"
+        android:src="@drawable/ic_baseline_play_circle_filled_24"
+        app:isVisible="@{playIsVisible}"
+        app:layout_constraintEnd_toEndOf="@id/left_image"
+        app:layout_constraintTop_toTopOf="@id/left_image" />
+
       <include
         layout="@layout/browse_include_media_group_title"
         bind:leftText="@{leftText}"
-        bind:rightText="@{rightText}" />
+        bind:rightText="@{rightText}"
+        bind:type="@{type}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
