--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- white | blue a200-->
+    <color name="colorPrimary">#2196f3</color>
+    <color name="colorPrimaryDark">#1976d2</color>
+    <color name="colorAccent">#7B1FA2</color>
+
     <color name="black_87">#DE000000</color>
     <color name="grey_700">#616161</color>
     <color name="blue_500">#2196f3</color>
