--- a/core/src/main/res/layout/horizontal_divider_view.xml
+++ b/core/src/main/res/layout/horizontal_divider_view.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.nlgtuankiet.fera.core.epoxy.HorizontalDividerView
-  xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
   android:layout_height="wrap_content">
 
   <View
     android:id="@+id/divider"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content" />
 </com.nlgtuankiet.fera.core.epoxy.HorizontalDividerView>
