--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <declare-styleable name="SnapCarousel">
-    <attr name="snapGravity" format="enum" />
-    <attr name="snapLastItem" format="boolean" />
+    <attr
+      name="snapGravity"
+      format="enum" />
+    <attr
+      name="snapLastItem"
+      format="boolean" />
   </declare-styleable>
 </resources>
