--- a/core/src/main/res/values/buttonStyles.xml
+++ b/core/src/main/res/values/buttonStyles.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Button.OutlinedButton.Icon" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon" />
+  <style
+    name="Button.OutlinedButton.Icon"
+    parent="Widget.MaterialComponents.Button.OutlinedButton.Icon" />
 
 </resources>
