--- a/browse/src/main/res/drawable/browse_images_with_circle.xml
+++ b/browse/src/main/res/drawable/browse_images_with_circle.xml
@@ -4,8 +4,8 @@
   <item
     android:bottom="@dimen/browse_category_icon_padding"
     android:drawable="@drawable/browse_outline_image_red_24"
-    android:end="@dimen/browse_category_icon_padding"
-    android:start="@dimen/browse_category_icon_padding"
+    android:right="@dimen/browse_category_icon_padding"
+    android:left="@dimen/browse_category_icon_padding"
     android:top="@dimen/browse_category_icon_padding" />
 
   <item android:drawable="@drawable/ic_outline_circle" />
