--- a/configure/src/main/res/layout/configure_view_holder_spec.xml
+++ b/configure/src/main/res/layout/configure_view_holder_spec.xml
@@ -24,6 +24,7 @@
   </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
+    tools:ignore="UnusedAttribute"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
@@ -32,6 +33,8 @@
     android:paddingVertical="8dp">
 
     <ImageView
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
       android:id="@+id/icon"
       android:layout_width="24dp"
       android:layout_height="24dp"
