--- a/core/src/main/res/layout/core_card_epoxy_recycler_view.xml
+++ b/core/src/main/res/layout/core_card_epoxy_recycler_view.xml
@@ -6,6 +6,8 @@
   android:layout_height="wrap_content"
   android:layout_marginStart="16dp"
   android:layout_marginEnd="16dp"
+  android:foreground="?android:attr/selectableItemBackground"
+  android:clickable="true"
   app:cardElevation="2dp">
 
   <com.nlgtuankiet.fera.core.view.BaseEpoxyRecyclerView
