--- a/core/src/main/res/layout/core_card_epoxy_recycler_view.xml
+++ b/core/src/main/res/layout/core_card_epoxy_recycler_view.xml
@@ -6,8 +6,10 @@
   android:layout_height="wrap_content"
   android:layout_marginStart="16dp"
   android:layout_marginEnd="16dp"
-  android:foreground="?android:attr/selectableItemBackground"
   android:clickable="true"
+  android:focusable="true"
+  android:focusableInTouchMode="true"
+  android:foreground="?android:attr/selectableItemBackground"
   app:cardElevation="2dp">
 
   <com.nlgtuankiet.fera.core.view.BaseEpoxyRecyclerView
