--- a/browse/src/main/res/layout/browse_view_holder_pair_media_group.xml
+++ b/browse/src/main/res/layout/browse_view_holder_pair_media_group.xml
@@ -52,9 +52,15 @@
     <variable
       name="rightPlayIsVisible"
       type="Boolean" />
+
+    <variable
+      name="onClickListener"
+      type="android.view.View.OnClickListener" />
+
   </data>
 
   <com.google.android.material.card.MaterialCardView
+    android:onClick="@{onClickListener}"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
