--- a/selectFormat/src/main/res/layout/select_format_fragment.xml
+++ b/selectFormat/src/main/res/layout/select_format_fragment.xml
@@ -3,8 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:background="@android:color/white">
+  android:layout_height="match_parent">
 
   <ImageView
     android:id="@+id/back_button"
@@ -23,7 +22,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
-    android:hint="search anything"
+    android:hint="@string/select_format_select_anything"
     app:layout_constraintBottom_toBottomOf="@id/back_button"
     app:layout_constraintEnd_toStartOf="@id/cancel_button"
     app:layout_constraintStart_toEndOf="@id/back_button"
